"View All" in F-Curves does not respect Y axis with small values. #45523

Closed
opened 2015-07-22 13:53:56 +02:00 by Mario Mey · 8 comments

When a Fcurve uses Y values of < 0.1, the "View All" (Home key) starts to act incorrectly. I doesn't respect the real Y scale. Sometimes, the view is scaled as the maximum value is 0.2, or 0.11... and so.

There is some kind of "equation/algorithm" (I don't know what word to use) that set the scale... it can be seen in the vertical scroll bar of the left, when you move the maximum vertex vertically. Sorry if I don't explain myself wel... it becomes difficult for me in these terms.

Better to use this file: 73-view-all-FCurves.blend

Open it.
Look at the "A" Action in F-Curves: the middle keyframe is at 5.
Scale the view as you want.
Press "Home" key: it scale all the keyframes correctly, in X and Y.
Change to "B" Action: the middle keyframe is at 0.02.
Press "Home" key: look at the view scale. X respected, but not Y.
Now, start moving the vertex in Y axis up to 0.1 and look at the scroll bar. Also, when you pass 0.1 the scroll bar does something strange.

When a Fcurve uses Y values of < 0.1, the "View All" (Home key) starts to act incorrectly. I doesn't respect the real Y scale. Sometimes, the view is scaled as the maximum value is 0.2, or 0.11... and so. There is some kind of "equation/algorithm" (I don't know what word to use) that set the scale... it can be seen in the vertical scroll bar of the left, when you move the maximum vertex vertically. Sorry if I don't explain myself wel... it becomes difficult for me in these terms. Better to use this file: [73-view-all-FCurves.blend](https://archive.blender.org/developer/F211583/73-view-all-FCurves.blend) Open it. Look at the "A" Action in F-Curves: the middle keyframe is at 5. Scale the view as you want. Press "Home" key: it scale all the keyframes correctly, in X and Y. Change to "B" Action: the middle keyframe is at 0.02. Press "Home" key: look at the view scale. X respected, but not Y. Now, start moving the vertex in Y axis up to 0.1 and look at the scroll bar. Also, when you pass 0.1 the scroll bar does something strange.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscribers: @JoshuaLeung, @JulianEisel

Added subscribers: @JoshuaLeung, @JulianEisel
Joshua Leung was assigned by Julian Eisel 2015-07-25 14:41:02 +02:00
Member

Hey @MarioSottile,
There is some code to make sure the view is not zoomed too extreme, so this is an intended behavior.
The scroller glitch is indeed strange though. Assigning to @aligorith.

Hey @MarioSottile, There is some code to make sure the view is not zoomed too extreme, so this is an intended behavior. The scroller glitch is indeed strange though. Assigning to @aligorith.
Member

This looks like some of the clamping protections put into place to prevent flat curves from causing problems (e.g. the ymin and ymax getting set to the same value!)

This looks like some of the clamping protections put into place to prevent flat curves from causing problems (e.g. the ymin and ymax getting set to the same value!)

This issue was referenced by 477078defa

This issue was referenced by 477078defa0eab48db167a04c208782d1114525c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45523
No description provided.